# leases-licensing

./: .gitignore  .pre-commit-config.yaml  0001_squashed_0004_auto_20160611_1202.patch  0001_squashed_0004_auto_20160611_1202.undo.patch  Dockerfile  README.md  apply-patch.sh  apply_initial_migrations_test.sh  azure-pipelines.yml  cron  manage.py  manage.sh  migration_steps.md  pre_startup.sh  pyproject.toml  python-cron  setup.cfg  startup.sh
.devcontainer/: devcontainer.json
dockerdev/: Dockerfile
leaseslicensing/: admin.py  apps.py  context_processors.py  exceptions.py  forms.py  helpers.py  ledger_api_utils.py  middleware.py  ordered_model.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
leaseslicensing/components/approvals/: admin.py  api.py  document.py  email.py  models.py  pdf.py  serializers.py
leaseslicensing/components/approvals/fixtures/: approvaltype.json  approvaltypedocumenttype.json  approvaltypedocumenttypeonapprovaltype.json
leaseslicensing/components/bookings/: email.py  views.py
leaseslicensing/components/competitive_processes/: api.py  email.py  models.py  serializers.py  utils.py
leaseslicensing/components/compliances/: admin.py  api.py  email.py  models.py  serializers.py
leaseslicensing/components/emails/: emails.py
leaseslicensing/components/invoicing/: admin.py  api.py  email.py  exceptions.py  models.py  serializers.py  tests.py  utils.py
leaseslicensing/components/main/: admin.py  api.py  decorators.py  filters.py  models.py  process_document.py  related_item.py  serializers.py  utils.py
leaseslicensing/components/organisations/: admin.py  api.py  emails.py  exceptions.py  models.py  serializers.py  signals.py  utils.py
leaseslicensing/components/proposals/: admin.py  api.py  email.py  forms.py  mixins.py  models.py  reversion.txt  serializers.py  signals.py  utils.py  views.py
leaseslicensing/components/proposals/fixtures/: default_standard_requirements.json
leaseslicensing/components/tenure/: __init__.py  admin.py  api.py  models.py  serializers.py
leaseslicensing/components/texts/: __init__.py  admin.py  api.py  models.py  serializers.py
leaseslicensing/components/users/: admin.py  api.py  models.py  serializers.py  signals.py
leaseslicensing/frontend/leaseslicensing/: .eslintrc  .gitignore  package-lock.json  package.json  vite.config.js  vue.config.js
leaseslicensing/integration_testing/: tests.py
leaseslicensing/management/: default_data_manager.py
leaseslicensing/management/commands/: approval_renewal_notices.py  approval_renewal_review_notifications.py  cron_tasks.py  expire_approvals.py  export_current_licence_contacts.py  export_licences.py  fetch_cpi_data.py  generate_invoices.py  invoice_payment_due_notifications.py  midnight_cron.py  monthly_invoices.py  morning_cron.py  populate_proposal_applicants.py  send_compliance_reminder.py  send_crown_land_rent_review_reminders.py  send_custom_cpi_reminders.py  send_gto_advance_turnover_entry_reminders.py  send_gto_advance_turnover_estimate_reminders.py  system_maintenance_check.py  update_approval_status.py  update_compliance_status.py
leaseslicensing/migrations/: 0001_initial.py  0108_alter_consumerpriceindex_year.py  0126_alter_competitiveprocess_options.py  0126_auto_20230310_1217.py  0127_merge_20230313_1525.py  0128_organisation_lodgement_number.py  0129_organisationrequest_organisation.py  0130_auto_20230320_1215.py  0131_alter_organisationrequest_organisation.py  0132_alter_organisationrequest_assigned_officer.py  0133_auto_20230321_1409.py  0134_auto_20230323_1018.py  0134_auto_20230324_1411.py  0135_auto_20230323_1215.py  0135_proposalrequirement_source.py  0136_auto_20230327_0916.py  0137_organisationcontact_user.py  0138_merge_20230328_1018.py  0139_auto_20230330_1015.py  0139_auto_20230403_1009.py  0140_emailuseraction_emailuserlogentry.py  0141_emailuserlogdocument.py  0142_auto_20230330_1319.py  0143_merge_0139_auto_20230403_1009_0142_auto_20230330_1319.py  0143_remove_organisationrequest_name.py  0144_competitiveprocesslogdocument.py  0144_remove_organisation_delegates.py  0145_auto_20230411_1013.py  0146_remove_organisationcontact_is_admin.py  0147_organisationrequest_name.py  0148_auto_20230418_1650.py  0149_category.py  0150_data_migration_tenure.py  0151_auto_20230419_1028.py  0152_auto_20230421_1030.py  0153_proposalgroup.py  0154_auto_20230421_1517.py  0155_alter_proposallocality_unique_together.py  0156_merge_20230421_1602.py  0157_approvalcancellationdocument.py  (+202 more)
leaseslicensing/templates/doc/: leases_licence_template.docx
leaseslicensing/templates/leaseslicensing/: base.html  contact.html  index.html  not-permitted.html
leaseslicensing/templates/ledgerui/: accounts_base_b5.html
leaseslicensing/templatetags/: users.py
leaseslicensing/utils/: __init__.py  commercialoperator-cronjobs
(+241 files in other folders)
